--- a/_posts/2021-01-09-issues-46.md
+++ b/_posts/2021-01-09-issues-46.md
@@ -7,159 +7,12 @@ tags:
 - Android
 ---
 
-<h2>一、标签</h2>
-<h3>1.B1</h3>
-<table role=\"table\">
-<thead>
-<tr>
-<th>b8</th>
-<th>b7</th>
-<th>b6</th>
-<th>b5</th>
-<th>b4</th>
-<th>b3</th>
-<th>b2</th>
-<th>b1</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>x</td>
-<td>x</td>
-<td>1</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>复合TLV</td>
-</tr>
-<tr>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>1</td>
-<td>1</td>
-<td>1</td>
-<td>1</td>
-<td>1</td>
-<td>多字节标签</td>
-</tr>
-</tbody>
-</table>
-<h3>2.B2（存在条件：B1 &amp; 0x1F == 0x1F）</h3>
-<table role=\"table\">
-<thead>
-<tr>
-<th>b8</th>
-<th>b7</th>
-<th>b6</th>
-<th>b5</th>
-<th>b4</th>
-<th>b3</th>
-<th>b2</th>
-<th>b1</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>后面跟随标签第3字节</td>
-</tr>
-</tbody>
-</table>
-<h3>3.B3（存在条件：B2 &amp; 0x80 == 0x80）</h3>
-<table role=\"table\">
-<thead>
-<tr>
-<th>b8</th>
-<th>b7</th>
-<th>b6</th>
-<th>b5</th>
-<th>b4</th>
-<th>b3</th>
-<th>b2</th>
-<th>b1</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>1</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>后面跟随标签第4字节</td>
-</tr>
-</tbody>
-</table>
-<h3>4.B4（存在条件：B3 &amp; 0x80 == 0x80）</h3>
-<p>取值任意</p>
-<h2>二、长度</h2>
-<h3>1.B1</h3>
-<table role=\"table\">
-<thead>
-<tr>
-<th>b8</th>
-<th>b7</th>
-<th>b6</th>
-<th>b5</th>
-<th>b4</th>
-<th>b3</th>
-<th>b2</th>
-<th>b1</th>
-<th>描述</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>0</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>b7-b1表示长度</td>
-</tr>
-<tr>
-<td>1</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>x</td>
-<td>b7-b1表示后面长度域字节数</td>
-</tr>
-</tbody>
-</table>
-<h3>2.单字节长度计算</h3>
-<p>长度 = B1</p>
-<h3>3.多字节长度计算</h3>
-<p>长度 = 大端排列的n个后续字节转换为整数。<br>
-例如 长度域为0x820120，那么长度 = 0x01*256 + 0x20 = 288。</p>
-<h2>三、数据</h2>
-<p>通过前面的长度域，得到数据域的范围。如果是复合TLV，那么数据域应由1个或多个TLV格式的数据拼接而成。</p>
-<h2>参考</h2>
-<ul>
-<li><a href=\"https://blog.csdn.net/meyunxi/article/details/102870585\" rel=\"nofollow\">TLV-meyunxi CSDN博客</a></li>
-</ul>
+
+
+| HEADER1 | HEADER2 | HEADER3 | HEADER4 |
+| ------- | :------ | :-----: | ------: |
+| content | content | content | content |
+
 
 ## 一、标签
 
