--- a/_posts/2021-01-09-issues-46.md
+++ b/_posts/2021-01-09-issues-46.md
@@ -9,9 +9,10 @@ tags:
 
 
 
-| HEADER1 | HEADER2 | HEADER3 | HEADER4 | 描述 |
+| b8 | b7 | b6 | b5 | 描述 |
 | ------- | ------ | ----- | ------ | ------ |
-| content11faqwefqwefasdfccasdf | content | content | content | 复合TLV |
+| content11faqwefqwefasdfccasdf | x | 1 | 2 | 复合TLV |
+
 
 
 ## 一、标签
